Testing to see if challenges is fixed on tablet, ignore last commit

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -358,16 +358,16 @@ body {
 }
 
 .col-lg-offset-problem-1 {
-    margin-left: 4.6%;
+    margin-left: 4.5%;
 }
 
 .col-lg-offset-problem-2 {
-    margin-left: 4.2%;
+    margin-left: 4.5%;
     margin-right: 4.5%;
 }
 
 .col-lg-offset-problem-3 {
-    margin-right: 5%;
+    margin-right: 4.5%;
 }
 
 .col-leg-offset-problem-1, .col-lg-offset-problem-2, .col-lg-offset-problem-3 {
